cargo-features = ["per-package-target"]

[package]
name = "cryptos"
version = "0.1.1-alpha"
edition = "2021"
forced-target = "x86_64-unknown-none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "runner" ]

[dependencies]
acpi = "4.1.1"
aml = { git = "https://github.com/rust-osdev/acpi", version = "0.16.3" }
bit = "0.1.1"
bit_field = "0.10.1"
bitflags = "1.3.2"
bootloader-x86_64-common = { git = "https://github.com/rust-osdev/bootloader", version = "0.11.3" }
bootloader_api = { git = "https://github.com/rust-osdev/bootloader", version = "0.11.3" }
byteorder = { version = "1.4.3", default-features = false }
conquer-once = { version = "0.3.2", default-features = false }
embedded-graphics = { version = "0.7.1", features = ["nalgebra_support"] }
embedded-graphics-core = { version = "0.3.3", features = ["nalgebra_support"] }
hashbrown = { version = "0.13.1", default-features = false, features = ["inline-more"] }
itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = { version = "0.4.17", default-features = false }
nalgebra = { version = "0.32.1", default-features = false }
noto-sans-mono-bitmap = "0.2.0"
pcics = "0.3.1"
raw-cpuid = "10.6.0"
redox_syscall = "0.3.4"
sha3 = { version = "0.10.6", default-features = false }
slab_allocator_rs = "1.0.1"
spin = "0.9.4"
spinning_top = "0.2.4"
strum = { version = "0.24.1", default-features = false }
unix_path = { version = "1.0.1", default-features = false, features = ["alloc"] }
usb_hid_item = { git = "https://github.com/rust-osdev/usb", version = "0.1.0" }
usb_hid_usage = { git = "https://github.com/rust-osdev/usb", version = "0.1.0" }
usb_request = { git = "https://github.com/rust-osdev/usb", version = "0.1.0" }
x2apic = "0.4.1"
x86_64 = "0.14.10"
xhci = "0.9.1"
xmas-elf = "^0.9.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256
