cargo-features = ["per-package-target", "edition2024"]

[package]
name = "cryptos"
version = "0.1.2-alpha"
edition = "2024"
forced-target = "x86_64-unknown-none"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ 
    "runner",
    "hmfsprogs"
]

[dependencies]
acpi = { git = "https://github.com/rust-osdev/acpi" }
aml = { git = "https://github.com/rust-osdev/acpi" }
bit = "0.1.1"
bit_field = "0.10.1"
bitflags = "2.4.0"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc", "atomic"] }
bootloader-x86_64-common = "^0.11.7"
bootloader_api = "^0.11.7"
btrfs-diskformat = "0.4.0"
byteorder = { version = "1.4.3", default-features = false }
conquer-once = { version = "^0.4.0", default-features = false }
embedded-graphics = { version = "0.8.1", features = ["nalgebra_support"] }
embedded-graphics-core = { version = "0.4.0", features = ["nalgebra_support"] }
embedded-layout = "^0.4.1"
fatfs = { git = "https://github.com/rafalh/rust-fatfs", version = "0.4.0", default-features = false }
hashbrown = { version = "^0.14.1", default-features = false, features = ["inline-more"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libflate = { version = "2.0.0", default-features = false }
log = { version = "0.4.17", default-features = false }
minipng = { version = "0.1.1", features = ["adler"] }
mr-mime = { version = "0.1.1", default-features = false, features = ["alloc"] }
nalgebra = { version = "0.32.1", default-features = false }
noto-sans-mono-bitmap = "0.3.0"
num-traits = { version = "0.2.17", default-features = false }
pcics = "0.3.1"
rand_core = { version = "0.6.4", features = ["alloc"] }
raw-cpuid = "11.0.1"
redox_syscall = "0.5.0"
sha3 = { version = "0.10.6", default-features = false }
slab_allocator_rs = "1.0.1"
spin = "0.9.4"
spinning_top = "0.3.0"
strum = { version = "0.26.1", default-features = false }
tinybmp = "0.5.0"
u8g2-fonts = { version = "0.4.0", default-features = false, features = ["embedded_graphics_textstyle"] }
unix_path = { version = "1.0.1", default-features = false, features = ["alloc"] }
usb_hid_item = { git = "https://github.com/rust-osdev/usb" }
usb_hid_usage = { git = "https://github.com/rust-osdev/usb" }
usb_request = { git = "https://github.com/rust-osdev/usb" }
x2apic = "0.4.1"
x86_64 = "0.15.0"
xhci = "0.9.1"
xmas-elf = "^0.9.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[patch.crates-io]
redox_syscall = { git = "https://gitlab.redox-os.org/redox-os/syscall" }
hashbrown = { git = "https://github.com/rust-lang/hashbrown" }

[features]
shutdown_on_panic = []
