[package]
name = "cryptoboot"
version.workspace = true
edition = "2021"
description = "Fork of rust-osdev/bootloader-x86_64-uefi with custom changes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader-x86_64-common = { git = "https://github.com/rust-osdev/bootloader", version = "0.11.0" }
bootloader_api = { git = "https://github.com/rust-osdev/bootloader", version = "0.11.0" }
log = "0.4.17"
uefi = "0.19.0"
x86_64 = "0.14.8"
