[package]
name = "runner"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptos = { path = "..", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "^0.11.0"
cryptoboot = { version = "0.1.1-alpha", path = "../cryptoboot", artifact = "bin", target = "x86_64-unknown-uefi" }
