[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptos = { path = "..", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "^0.11"
bootloader-boot-config = "^0.11"
ovmf-prebuilt = { git = "https://github.com/rust-osdev/ovmf-prebuilt", artifact = "bin", version = "0.1.0" }
